# jacie

./: .gitignore  README.md  pyproject.toml
chroma_db/2dc87f6c-4f9a-47b5-b006-6dd453babda5/: index_metadata.pickle
chroma_db/5266ccd5-7f55-41ba-877d-b51e3c0e7fd5/: index_metadata.pickle
docs/: setup_comp_name_vdb.py  setup_qa.py  setup_vdb.py  setup_vdb_v2.py  summarize_page.ipynb  summarize_page.py
docs/companies/: setup_comp_name_vdb.py
jacie/: app.py  initialization.py  llama_initialization.py  processing.py  prompts.py  utils.py
jacie/utils/: chatbot.py
vector_store/: index.pkl
